[package]
name = "ballista-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
simd = ["datafusion/simd"]

[dependencies]
ahash = "0.7"
futures = "0.3"
prost = "0.7"
serde = {version = "1", features = ["derive"]}
async-trait = "0.1.36"

snmalloc-rs = {version = "0.2", features= ["cache-friendly"], optional = true}
log = "0.4"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.4"

parquet-format = { version = "4.0.0" }
arrow = { version = "4.4.0" }
arrow-flight = { version = "4.0"  }
datafusion = { git = "https://github.com/apache/arrow-datafusion.git"}
parquet = { version = "4.4.0" }
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = { version = "0.4" }
