[package]
name = "datafusion-ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
async-trait = "0.1.52"
datafusion = "6.0.0"
futures = "0.3.19"
jni = "0.19.0"
log = "0.4.14"
tokio = "1.15.0"
tokio-stream = "0.1.8"

[patch.crates-io]
datafusion = { git = "https://github.com/blaze-init/arrow-datafusion.git", branch = "bz_master"}
arrow = { git = "https://github.com/apache/arrow-rs.git", branch = "master" }
parquet = { git = "https://github.com/apache/arrow-rs.git", branch = "master" }
