[package]
name = "datafusion-ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
async-trait = "0.1.52"
datafusion = "6.0.0"
futures = "0.3.19"
jni = "0.19.0"
lazy_static = "1.4.0"
log = "0.4.14"
tokio = "1.15.0"
tokio-stream = "0.1.8"
tempfile = "3"
