[package]
name = "datafusion-jni"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
ballista-core = { path = "../ballista-core" }

[build-dependencies]

[lib]
crate_type = ["cdylib"]
name = "datafusion_jni_lib"
