[package]
name = "plan-serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.36"
chrono = { version = "0.4", default-features = false }
datafusion = { version = "7.0.0", features = ["simd"] }
datafusion-ext = { path = "../datafusion-ext" }
log = "0.4.14"
prost = "0.9"
tonic = "0.6"

[build-dependencies]
tonic-build = { version = "0.6" }
