[package]
name = "blaze-serde"
version = "0.1.0"
edition = "2021"

[features]
default = ["prost/no-recursion-limit"]

[dependencies]
arrow = { workspace = true }
base64 = "*"
datafusion = { workspace = true }
datafusion-ext-commons = { workspace = true }
datafusion-ext-exprs = { workspace = true }
datafusion-ext-functions = { workspace = true }
datafusion-ext-plans = { workspace = true }
log = "0.4.26"
object_store = "0.12.0"
prost = "0.13.5"
parking_lot = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
