[package]
name = "blaze-serde"
version = "0.1.0"
edition = "2024"

[features]
default = ["prost/no-recursion-limit"]

[dependencies]
arrow = { workspace = true }
base64 = "*"
datafusion = { workspace = true }
datafusion-ext-commons = { workspace = true }
datafusion-ext-exprs = { workspace = true }
datafusion-ext-functions = { workspace = true }
datafusion-ext-plans = { workspace = true }
log = "0.4.27"
object_store = "0.11.1"
prost = "0.14.1"
parking_lot = "0.12.4"

[build-dependencies]
tonic-build = "0.13.1"
