[package]
name = "blaze-serde"
version = "0.1.0"
edition = "2024"

[features]
default = ["prost/no-recursion-limit"]

[dependencies]
arrow = { workspace = true }
datafusion = { workspace = true }
datafusion-ext-commons = { workspace = true }
datafusion-ext-exprs = { workspace = true }
datafusion-ext-functions = { workspace = true }
datafusion-ext-plans = { workspace = true }

base64 = { workspace = true }
log = { workspace = true }
object_store = { workspace = true }
prost = { workspace = true }
parking_lot = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
