[package]
name = "blaze"
version = "0.1.0"
edition = "2021"
resolver = "1"

[lib]
crate-type = ["cdylib"]

[features]
default = ["tokio/rt-multi-thread"]

[dependencies]
arrow = { workspace = true }
blaze-jni-bridge = { workspace = true }
blaze-serde = { workspace = true }
datafusion = { workspace = true }
datafusion-ext-commons = { workspace = true }
datafusion-ext-plans = { workspace = true }
futures = "0.3"
jni = "0.20.0"
log = "0.4.21"
jemallocator = { version = "0.5.0", features = ["disable_initial_exec_tls"] }
once_cell = "1.19.0"
panic-message = "0.3.0"
paste = "1.0.15"
prost = "0.12.6"
tokio = "1.38"
