[package]
name = "blaze"
version = "0.1.0"
edition = "2021"
resolver = "1"

[lib]
crate-type = ["cdylib"]

[features]
default = ["tokio/rt-multi-thread", "jemalloc"]

jemalloc = ["dep:tikv-jemallocator"]

jemalloc-pprof = ["dep:tikv-jemalloc-ctl", "dep:tikv-jemalloc-sys", "dep:jemalloc_pprof", "dep:pprof", "http-service"]

http-service = []

[dependencies]
arrow = { workspace = true }
blaze-jni-bridge = { workspace = true }
blaze-serde = { workspace = true }
bytesize = "2.0.1"
datafusion = { workspace = true }
datafusion-ext-commons = { workspace = true }
datafusion-ext-plans = { workspace = true }
futures = "0.3"
jni = "0.20.0"
log = "0.4.26"
once_cell = "1.20.3"
panic-message = "0.3.0"
paste = "1.0.15"
prost = "0.13.5"
tokio = "1.44.0"
poem = { version = "3.1.7", features = ["rustls", "test"] }
serde = { version = "1", features = ["derive"] }

[dependencies.tikv-jemalloc-ctl]
version = "0.6.0"
optional = true
features = ["use_std"]

[dependencies.tikv-jemalloc-sys]
version = "0.6.0"
optional = true
features = ["stats", "profiling", "unprefixed_malloc_on_supported_platforms", "disable_initial_exec_tls"]

[dependencies.tikv-jemallocator]
version = "0.6.0"
optional = true
features = ["disable_initial_exec_tls"]

[dependencies.jemalloc_pprof]
version = "0.6.0"
optional = true

[dependencies.pprof]
version = "0.14.0"
features = ["flamegraph", "protobuf-codec", "protobuf"]
optional = true