[package]
name = "blaze"
version = "0.1.0"
edition = "2024"
resolver = "1"

[lib]
crate-type = ["cdylib"]

[features]
default = ["tokio/rt-multi-thread", "jemalloc"]
jemalloc = ["dep:tikv-jemallocator"]
jemalloc-pprof = ["dep:tikv-jemalloc-ctl", "dep:tikv-jemalloc-sys", "dep:jemalloc_pprof", "dep:pprof", "dep:poem", "dep:serde", "http-service"]
http-service = []

[dependencies]
arrow = { workspace = true }
blaze-jni-bridge = { workspace = true }
blaze-serde = { workspace = true }
datafusion = { workspace = true }
datafusion-ext-commons = { workspace = true }
datafusion-ext-plans = { workspace = true }

bytesize = { workspace = true }
futures = { workspace = true }
jni = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
panic-message = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

[dependencies.tikv-jemalloc-ctl]
version = "0.6.0"
optional = true
features = ["use_std"]

[dependencies.tikv-jemalloc-sys]
version = "0.6.0"
optional = true
features = ["stats", "profiling", "unprefixed_malloc_on_supported_platforms", "disable_initial_exec_tls"]

[dependencies.tikv-jemallocator]
version = "0.6.0"
optional = true
features = ["disable_initial_exec_tls"]

[dependencies.jemalloc_pprof]
version = "0.8.0"
features = ["symbolize"]
optional = true

[dependencies.pprof]
version = "0.15.0"
optional = true
features = ["flamegraph", "protobuf-codec", "protobuf"]

[dependencies.poem]
version = "3.1.12"
optional = true
features = ["rustls", "test"]


[dependencies.serde]
version = "1.0.219"
optional = true
