[package]
name = "datafusion-ext-commons"
version = "0.1.0"
edition = "2021"
resolver = "1"

[features]
default = ["tokio/rt-multi-thread"]

[dependencies]
arrow = { workspace = true }
arrow-schema = { workspace = true }
async-trait = "0.1.88"
bitvec = "1.0.1"
blaze-jni-bridge = { workspace = true }
bigdecimal = "0.4.8"
byteorder = "1.5.0"
bytes = "1.10.1"
chrono = "0.4.33"
datafusion = { workspace = true }
futures = "0.3"
itertools = "0.14.0"
jni = "0.20.0"
log = "0.4.27"
num = "0.4.2"
once_cell = "1.21.3"
paste = "1.0.15"
radsort = "0.1.1"
smallvec = "2.0.0-alpha.11"
tempfile = "3"
thrift = "0.17.0"
tokio = "1.45.1"
unchecked-index = "0.2.2"

[dev-dependencies]
rand = "0.9.1"
