#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[package]
name = "datafusion-ext-commons"
version = "0.1.0"
edition = "2024"
resolver = "1"

[features]
default = ["tokio/rt-multi-thread"]

[dependencies]
arrow = { workspace = true }
arrow-schema = { workspace = true }
auron-jni-bridge = { workspace = true }
datafusion = { workspace = true }

async-trait = { workspace = true }
bigdecimal = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
jni = { workspace = true }
log = { workspace = true }
num = { workspace = true }
once_cell = { workspace = true }
paste = { workspace = true }
smallvec = { workspace = true }
tempfile = { workspace = true }
transpose = { workspace = true }
tokio = { workspace = true }
unchecked-index = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
