[package]
name = "datafusion-ext-exprs"
version = "0.1.0"
edition = "2021"
resolver = "1"

[dependencies]
arrow = { workspace = true }
async-trait = "0.1.88"
blaze-jni-bridge = { workspace = true }
datafusion = { workspace = true }
datafusion-ext-commons = { workspace = true }
itertools = "0.14.0"
jni = "0.20.0"
log = "0.4.27"
num = "0.4.2"
once_cell = "1.21.3"
parking_lot = "0.12.4"
paste = "1.0.15"
