[package]
name = "datafusion-ext-exprs"
version = "0.1.0"
edition = "2024"
resolver = "1"

[dependencies]
arrow = { workspace = true }
async-trait = "0.1.88"
blaze-jni-bridge = { workspace = true }
datafusion = { workspace = true }
datafusion-ext-commons = { workspace = true }

itertools = { workspace = true }
jni = { workspace = true }
log = { workspace = true }
num = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
paste = { workspace = true }
