[package]
name = "datafusion-ext-file-formats"
version = "0.1.0"
edition = "2021"
resolver = "1"

[features]
default = ["arrow/ffi", "datafusion/simd"]

[dependencies]
arrow = "26.0.0"
async-trait = "0.1.56"
blaze-commons = { path = "../blaze-commons" }
bytes = "1.1.0"
datafusion = "14.0.0"
futures = "0.3"
jni = "0.20.0"
log = "0.4.14"
once_cell = "1.11.0"
