[package]
name = "datafusion-ext-functions"
version = "0.1.0"
edition = "2021"
resolver = "1"

[dependencies]
arrow = { workspace = true }
async-trait = "0.1.81"
blaze-jni-bridge = { workspace = true }
bigdecimal = "0.4.5"
datafusion = { workspace = true }
datafusion-ext-commons = { workspace = true }
itertools = "0.13.0"
log = "0.4.22"
num = "0.4.2"
paste = "1.0.15"
serde_json = { workspace = true }
sonic-rs = "0.3.10"
